[gd_scene load_steps=10 format=3 uid="uid://bvx4t5ypgmt6i"]

[ext_resource type="Script" uid="uid://d0pbbdxsd5gjs" path="res://assets/Scripts/Menu/level_select.gd" id="1_4juup"]
[ext_resource type="Texture2D" uid="uid://cmyfl0cl28vst" path="res://assets/Sprites/Button/blue.png" id="2_pq36x"]
[ext_resource type="Texture2D" uid="uid://dy5clo7x35ncu" path="res://assets/Sprites/Button/blue_pressed.png" id="3_b8dml"]
[ext_resource type="Texture2D" uid="uid://d4j70uffu0gxu" path="res://assets/Sprites/Button/green_pressed.png" id="4_hyy3w"]
[ext_resource type="Texture2D" uid="uid://x1ihqgxq21f1" path="res://assets/Sprites/Button/green.png" id="5_tgpxl"]
[ext_resource type="FontFile" uid="uid://dk82jtbi03n5p" path="res://assets/Fonts/Coven-Filled.ttf" id="6_46d1u"]
[ext_resource type="Texture2D" uid="uid://b8e7wcdksx2e5" path="res://assets/Sprites/Button/red_rectangle.png" id="7_01bmn"]
[ext_resource type="Texture2D" uid="uid://bkaoygcemflnk" path="res://assets/Sprites/Button/red_rectangle_pressed.png" id="8_fn61j"]
[ext_resource type="Texture2D" uid="uid://dypwcc62ifion" path="res://assets/Sprites/Button/green_rectangle.png" id="9_jwpom"]

[node name="LevelSelect" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_4juup")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.372017, 0.587277, 0.999999, 1)

[node name="Tutorial" type="TextureButton" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.073
anchor_top = 0.433
anchor_right = 0.223
anchor_bottom = 0.7
offset_left = 3.27999
offset_top = 0.119995
offset_right = -44.72
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
focus_neighbor_left = NodePath("../LevelThree")
focus_neighbor_top = NodePath("../EscapeButton")
focus_neighbor_right = NodePath("../LevelOne")
focus_next = NodePath("../LevelOne")
focus_previous = NodePath("../LevelThree")
texture_normal = ExtResource("2_pq36x")
texture_pressed = ExtResource("3_b8dml")
texture_hover = ExtResource("4_hyy3w")
texture_focused = ExtResource("5_tgpxl")

[node name="Text" type="RichTextLabel" parent="CanvasLayer/ColorRect/Tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.354
anchor_right = 0.927
anchor_bottom = 0.604
offset_left = 0.0079999
offset_top = 0.00799942
offset_right = 39.504
offset_bottom = 12.008
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_46d1u")
theme_override_font_sizes/normal_font_size = 15
text = "Tutorial"

[node name="LevelOne" type="TextureButton" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.433
anchor_right = 0.462
anchor_bottom = 0.7
offset_left = 0.319992
offset_top = 0.119995
offset_right = -47.68
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
focus_neighbor_left = NodePath("../Tutorial")
focus_neighbor_top = NodePath("../EscapeButton")
focus_neighbor_right = NodePath("../LevelTwo")
focus_next = NodePath("../LevelTwo")
focus_previous = NodePath("../Tutorial")
texture_normal = ExtResource("2_pq36x")
texture_pressed = ExtResource("3_b8dml")
texture_hover = ExtResource("4_hyy3w")
texture_focused = ExtResource("5_tgpxl")

[node name="Text" type="RichTextLabel" parent="CanvasLayer/ColorRect/LevelOne"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.104
anchor_right = 0.937
anchor_bottom = 0.885
offset_left = 0.0239999
offset_top = 0.0079999
offset_right = 42.024
offset_bottom = 37.52
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_46d1u")
text = "Level
One"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelTwo" type="TextureButton" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.547
anchor_top = 0.433
anchor_right = 0.697
anchor_bottom = 0.7
offset_left = -0.0800171
offset_top = 0.119995
offset_right = -48.08
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
focus_neighbor_left = NodePath("../LevelOne")
focus_neighbor_top = NodePath("../EscapeButton")
focus_neighbor_right = NodePath("../LevelThree")
focus_next = NodePath("../LevelThree")
focus_previous = NodePath("../LevelOne")
texture_normal = ExtResource("2_pq36x")
texture_pressed = ExtResource("3_b8dml")
texture_hover = ExtResource("4_hyy3w")
texture_focused = ExtResource("5_tgpxl")

[node name="Text" type="RichTextLabel" parent="CanvasLayer/ColorRect/LevelTwo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.094
anchor_right = 0.875
anchor_bottom = 0.875
offset_top = -0.0119963
offset_right = 36.0
offset_bottom = 37.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_46d1u")
text = "Level
Two"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelThree" type="TextureButton" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.781
anchor_top = 0.433
anchor_right = 0.931
anchor_bottom = 0.7
offset_left = 0.159973
offset_top = 0.119995
offset_right = -47.84
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
focus_neighbor_left = NodePath("../LevelTwo")
focus_neighbor_top = NodePath("../EscapeButton")
focus_neighbor_right = NodePath("../Tutorial")
focus_next = NodePath("../Tutorial")
focus_previous = NodePath("../LevelTwo")
texture_normal = ExtResource("2_pq36x")
texture_pressed = ExtResource("4_hyy3w")
texture_hover = ExtResource("5_tgpxl")
texture_focused = ExtResource("5_tgpxl")

[node name="Text" type="RichTextLabel" parent="CanvasLayer/ColorRect/LevelThree"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.094
anchor_right = 0.875
anchor_bottom = 0.875
offset_top = -0.0119963
offset_right = 36.0
offset_bottom = 37.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_46d1u")
text = "Level
Three"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EscapeButton" type="TextureButton" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.187
anchor_bottom = 0.133
offset_right = 0.319992
offset_bottom = 0.119999
focus_neighbor_left = NodePath("../Tutorial")
focus_neighbor_right = NodePath("../Tutorial")
focus_neighbor_bottom = NodePath("../Tutorial")
focus_next = NodePath("../Tutorial")
focus_previous = NodePath("../Tutorial")
texture_normal = ExtResource("7_01bmn")
texture_pressed = ExtResource("8_fn61j")
texture_hover = ExtResource("8_fn61j")
texture_focused = ExtResource("9_jwpom")

[node name="Back" type="RichTextLabel" parent="CanvasLayer/ColorRect/EscapeButton"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 117.0
offset_bottom = 43.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_46d1u")
theme_override_font_sizes/normal_font_size = 25
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/ColorRect/Tutorial" to="CanvasLayer" method="_on_tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/LevelOne" to="CanvasLayer" method="_on_level_one_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/LevelTwo" to="CanvasLayer" method="_on_level_two_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ColorRect/LevelThree" to="CanvasLayer" method="_on_level_three_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/ColorRect/LevelThree" to="CanvasLayer" method="_on_level_three_focus_exited"]
[connection signal="pressed" from="CanvasLayer/ColorRect/LevelThree" to="CanvasLayer" method="_on_level_three_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/EscapeButton" to="CanvasLayer" method="_on_escape_button_pressed"]
